local/src/omnicaching-zlib/zlib-1.2.6/configure.log
--------------------
./configure --prefix=/tmp/omnicaching/embedded
Thu Dec  1 15:46:37 IST 2022

Checking for gcc...
=== ztest63160.c ===
extern int getchar();
int hello() {return getchar();}
===
gcc -c -I/tmp/omnicaching/embedded/include -O3 -D_FORTIFY_SOURCE=2 -fstack-protector ztest63160.c
... using gcc

Checking for shared library support...
=== ztest63160.c ===
extern int getchar();
int hello() {return getchar();}
===
gcc -w -c -I/tmp/omnicaching/embedded/include -O3 -D_FORTIFY_SOURCE=2 -fstack-protector -fPIC ztest63160.c
gcc -dynamiclib -install_name ${exec_prefix}/lib/libz.1.dylib -compatibility_version 1 -current_version 1.2.6 -I/tmp/omnicaching/embedded/include -O3 -D_FORTIFY_SOURCE=2 -fstack-protector -fPIC -o ztest63160.dylib ztest63160.o
Building shared library libz.1.2.6.dylib with gcc.

=== ztest63160.c ===
#include <sys/types.h>
off64_t dummy = 0;
===
gcc -c -I/tmp/omnicaching/embedded/include -O3 -D_FORTIFY_SOURCE=2 -fstack-protector -D_LARGEFILE64_SOURCE=1 ztest63160.c
ztest63160.c:2:1: error: unknown type name 'off64_t'; did you mean 'off_t'?
off64_t dummy = 0;
^~~~~~~
off_t
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/sys/_types/_off_t.h:31:33: note: 'off_t' declared here
typedef __darwin_off_t          off_t;
                                ^
1 error generated.
(exit code 1)
Checking for off64_t... No.

=== ztest63160.c ===
#include <stdio.h>
int main(void) {
  fseeko(NULL, 0, 0);
  return 0;
}
===
gcc -I/tmp/omnicaching/embedded/include -O3 -D_FORTIFY_SOURCE=2 -fstack-protector -o ztest63160 ztest63160.c
Checking for fseeko... Yes.

=== ztest63160.c ===
#include <unistd.h>
int main() { return 0; }
===
gcc -c -I/tmp/omnicaching/embedded/include -O3 -D_FORTIFY_SOURCE=2 -fstack-protector ztest63160.c
Checking for unistd.h... Yes.

=== ztest63160.c ===
#include <stdarg.h>
int main() { return 0; }
===
gcc -c -I/tmp/omnicaching/embedded/include -O3 -D_FORTIFY_SOURCE=2 -fstack-protector ztest63160.c
Checking for stdarg.h... Yes.

=== ztest63160.c ===
#include <stdio.h>
#include <stdarg.h>
#include "zconf.h"
int main()
{
#ifndef STDC
  choke me
#endif
  return 0;
}
===
gcc -c -I/tmp/omnicaching/embedded/include -O3 -D_FORTIFY_SOURCE=2 -fstack-protector ztest63160.c
Checking whether to use vs[n]printf() or s[n]printf()... using vs[n]printf().

=== ztest63160.c ===
#include <stdio.h>
#include <stdarg.h>
int mytest(const char *fmt, ...)
{
  char buf[20];
  va_list ap;
  va_start(ap, fmt);
  vsnprintf(buf, sizeof(buf), fmt, ap);
  va_end(ap);
  return 0;
}
int main()
{
  return (mytest("Hello%d\n", 1));
}
===
gcc -I/tmp/omnicaching/embedded/include -O3 -D_FORTIFY_SOURCE=2 -fstack-protector -o ztest63160 ztest63160.c
Checking for vsnprintf() in stdio.h... Yes.

=== ztest63160.c ===
#include <stdio.h>
#include <stdarg.h>
int mytest(const char *fmt, ...)
{
  int n;
  char buf[20];
  va_list ap;
  va_start(ap, fmt);
  n = vsnprintf(buf, sizeof(buf), fmt, ap);
  va_end(ap);
  return n;
}
int main()
{
  return (mytest("Hello%d\n", 1));
}
===
gcc -c -I/tmp/omnicaching/embedded/include -O3 -D_FORTIFY_SOURCE=2 -fstack-protector ztest63160.c
Checking for return value of vsnprintf()... Yes.

=== ztest63160.c ===
#if ((__GNUC__-0) * 10 + __GNUC_MINOR__-0 >= 33)
#  define ZLIB_INTERNAL __attribute__((visibility ("hidden")))
#else
#  define ZLIB_INTERNAL
#endif
int ZLIB_INTERNAL foo;
int main()
{
  return 0;
}
===
gcc -c -I/tmp/omnicaching/embedded/include -O3 -D_FORTIFY_SOURCE=2 -fstack-protector ztest63160.c
Checking for attribute(visibility) support... Yes.

ALL = static shared
AR = libtool
ARFLAGS = -o
CC = gcc
CFLAGS = -I/tmp/omnicaching/embedded/include -O3 -D_FORTIFY_SOURCE=2 -fstack-protector
CPP = gcc -E
EXE =
LDCONFIG = ldconfig
LDFLAGS = -Wl,-rpath,/tmp/omnicaching/embedded/lib -L/tmp/omnicaching/embedded/lib
LDSHARED = gcc -dynamiclib -install_name ${exec_prefix}/lib/libz.1.dylib -compatibility_version 1 -current_version 1.2.6
LDSHAREDLIBC = -lc
OBJC = $(OBJZ) $(OBJG)
PIC_OBJC = $(PIC_OBJZ) $(PIC_OBJG)
RANLIB = ranlib
SFLAGS = -I/tmp/omnicaching/embedded/include -O3 -D_FORTIFY_SOURCE=2 -fstack-protector -fPIC
SHAREDLIB = libz.dylib
SHAREDLIBM = libz.1.dylib
SHAREDLIBV = libz.1.2.6.dylib
STATICLIB = libz.a
TEST = all teststatic testshared
VER = 1.2.6
exec_prefix = ${prefix}
includedir = ${prefix}/include
libdir = ${exec_prefix}/lib
mandir = ${prefix}/share/man
prefix = /tmp/omnicaching/embedded
sharedlibdir = ${libdir}
uname = Darwin
--------------------


